# ECS-Engine

./: .gitignore  CMakeLists.txt  README.md
src/: CollisionComp.h  Entity.h  EntityManager.h  GameVector.h  InputComp.h  LifespanComp.h  Main.cc  ScoreComp.h  ShapeComp.h  TransformComp.h  entity_manager.hpp  main.cc  main.cpp  system_boundary.hpp  system_collision.hpp  system_cursorMovement.hpp  system_draw.hpp  system_input.hpp  system_marshal.hpp  system_movement.hpp  utils.hpp
src/Ecs/Component/: circle_shape.h  rectangle_shape.h
src/Ecs/Core/: entity.h  entity_manager.h
src/EcsHeaders/: CollisionComp.h  Entity.h  EntityManager.h  GameVector.h  InputComp.h  RectShapeComp.h  ScoreComp.h  TransformComp.h
